infra/staging/rds.tf
resource "random_password" "initial_password" {
  length           = 40
  special          = true
  min_special      = 5
  override_special = "!#$%^&*()-_=+[]{}<>:?"
  keepers = {
    pass_version = 1
  }
}

resource "aws_db_subnet_group" "default" {
  name       = "main"
  subnet_ids = data.aws_subnet_ids.private_subnets.ids

  tags = {
    Name     = "Gram DB subnet group"
    SystemID = "gram"
    Team     = "Secure Development"
  }
}

resource "aws_rds_cluster" "encrypted_db_cluster" {
  cluster_identifier                  = "gram-staging-database-cluster"
  engine                              = "aurora-postgresql"
  engine_version                      = "14.5"
  availability_zones                  = ["eu-west-1a", "eu-west-1b", "eu-west-1c"]
  database_name                       = "gram"
  backup_retention_period             = 30
  preferred_backup_window             = "05:01-05:31"
  vpc_security_group_ids              = [aws_security_group.postgres_allow_office.id, aws_security_group.postgres_allow_gram_c2c.id, aws_security_group.postgres_allow_from_sg.id]
  iam_database_authentication_enabled = true
  deletion_protection                 = true
  copy_tags_to_snapshot               = true
  skip_final_snapshot                 = false
  
  tags = {
    SystemID          = "gram"
    Team              = "Secure Development"
    OhPoliceNamespace = "gram"
    "kep:kbsd:enableDisasterRecoveryBackup" = "false"
  }
}

resource "aws_db_instance" "encrypted_db" {
  allocated_storage = 20
  storage_type      = "aurora"
  engine            = "aurora-postgresql"
  instance_class    = "db.t4g.medium"
  name              = "gram"
  username          = "gram"
  # password                = random_password.initial_password.result
  parameter_group_name                = "default.aurora-postgresql14"
  db_subnet_group_name                = aws_db_subnet_group.default.id
  identifier                          = "gram-staging-database"
  
  iam_database_authentication_enabled = true  
  copy_tags_to_snapshot               = true
  storage_encrypted                   = true
  skip_final_snapshot                 = false

  tags = {
    SystemID          = "gram"
    Team              = "Secure Development"
    OhPoliceNamespace = "gram"    
  }
}

output "initial_password" {
  value = random_password.initial_password.result
}

output "db_endpoint" {
  value = aws_db_instance.encrypted_db.endpoint
}
